# CppTemplateWithCMake

./: .gitignore  CMakeLists.txt  README.md  charPointers.cpp  icsneoGetErrorInfo_junkTesting.cpp  main.cpp  memberFunctions.cpp  sizeTtoIntCheck.cpp  stdCopy.cpp  variableCaseNaming.cpp
